--- a/index.html
+++ b/index.html
@@ -45,18 +45,27 @@
                </div>
                <div class="offcanvas-body">
                   <div class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                     <ul class="navbar-nav mb-2 mb-lg-0 gap-4 text-uppercase">
+                     <ul class="navbar-nav align-items-center mb-2 mb-lg-0 gap-4 text-uppercase">
                         <li class="nav-item">
                            <a class="nav-link active" href="./index.html" target="_self" title="">Home</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="./recepies.html" target="_self" title="">About us</a>
+                           <a class="nav-link" href="#" target="_self" title="">About us</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="./helthy-life.html" target="_self" title="">Contact us</a>
+                           <a class="nav-link" href="#" target="_self" title="">Contact us</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link logIn-btn" href="./helthy-life.html" target="_self" title=""> LogIn </a>
+                           <a class="nav-link logIn-btn" href="./login.html" target="_self" title=""> LogIn </a>
+                        </li>
+                        <li class="nav-item">
+                           <div class="dropdown">
+                              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Account Name</button>
+                              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                 <li><a class="dropdown-item" href="./my-account.html">My Account</a></li>
+                                 <li><a class="dropdown-item" href="#">LogOut</a></li>
+                              </ul>
+                           </div>
                         </li>
                      </ul>
                   </div>
